Reduced size of state labels in India Map to avoid overlap

--- a/Language Patterns in India/styles1.css
+++ b/Language Patterns in India/styles1.css
@@ -203,7 +203,7 @@ text {
     }
 	
 	.state-label {
-	  font-size: 5px;
+	  font-size: 3px;
 	}
 	
 	.footer {
@@ -245,7 +245,7 @@ text {
     }
 	
 	.state-label {
-	  font-size: 7px;
+	  font-size: 4px;
 	}
 	
 	.footer {
@@ -288,7 +288,7 @@ text {
     }
 	
 	.state-label {
-	  font-size: 8px;
+	  font-size: 5px;
 	}
 	
 	.footer {
